EZP-22408 [WIP] check destination content existence before populatin relation field value

--- a/eZ/Publish/Core/settings/storage_engines/legacy/field_value_converters.yml
+++ b/eZ/Publish/Core/settings/storage_engines/legacy/field_value_converters.yml
@@ -142,8 +142,9 @@ services:
 
     ezpublish.fieldType.ezobjectrelation.converter:
         class: %ezpublish.fieldType.ezobjectrelation.converter.class%
+        arguments: [@ezpublish.api.storage_engine.legacy.dbhandler]
         tags:
-            - {name: ezpublish.storageEngine.legacy.converter, alias: ezobjectrelation, lazy: true, callback: '::create'}
+            - {name: ezpublish.storageEngine.legacy.converter, alias: ezobjectrelation}
 
     ezpublish.fieldType.ezobjectrelationlist.converter:
         class: %ezpublish.fieldType.ezobjectrelationlist.converter.class%
